--- a/single.html
+++ b/single.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/menu.css">
+	<link rel="stylesheet" href="css/menu.css">
     <!--Titulo de la pagina-->
     <title>SabujCha</title>
     <!--Custom Fonts-->
@@ -16,7 +16,7 @@
 <body>
     <header class="main-header">
         <div class="zerogrid">
-            <div class="top">
+            <div class="row">
                 <div class="logo">
                     <a class="site-branding" href="index.html">
                         <img src="./img/logo.png" />
@@ -38,40 +38,5 @@
             </div>
         </div>
     </header>
-    <main>
-        <span>Want to stay healthy drink matcha.</span>
-        <a href="pages.html" class="top-shop">Shop Now</a>
-    </main>
-        <nav class="Banner-top">
-            <div class="image-1">
-                <img src="./img/banner-1.png"><a class="Descuento">-50% Sale</a>
-                <span>SUMMER VACATION</span>
-            </div>
-            <div class="image-1">
-                <img src="./img/banner-2.png"><a class="Descuento">-20% Sale</a>
-                <span>WINTER VACATION</span>
-            </div>
-        </nav>
-    </main>
-    <section>
-        <nav class="container-pages">
-            <header>Latest Products</header>
-            <p>lore ipsum dolor sit amel,consectetur adipsicing elit sed do
-            ciusmod tempor incididunt.</p>
-        </nav>
-        <div class="container-pages-image-1">
-            <img src="./img/cart-1.jpg" alt="Nature close tea">
-            <a class="text1-bt-after">Nature Close Tea</a>
-            <a class="text2-bt-after">
-            $100.00 -<del class="valoralto"> $120,00</del></a>
-        </div>
-        <div class="container-pages-image-1">
-            <img src="./img/cart-2.jpg" alt="">
-            <a class="text1-bt-after">Nature Close Tea</a>
-            <a class="text2-bt-after">
-            $100.00 -<del class="valoralto"> $120,00</del></a>
-        </div>
-    </section>
-
 </body>
 </html>
