Finalización pagina Home

--- a/Index.html
+++ b/Index.html
@@ -56,21 +56,97 @@
     <section>
         <nav class="container-pages">
             <header>Latest Products</header>
-            <p>lore ipsum dolor sit amel,consectetur adipsicing elit sed do
-            ciusmod tempor incididunt.</p>
+                <p>lore ipsum dolor sit amel,consectetur adipsicing elit sed do
+                ciusmod tempor incididunt.</p>
+            <div class="container-pages-image-1">
+                <img src="./img/product-1.jpg" alt="Nature close tea">
+                <a class="text1-bt-after">Nature Close Tea</a>
+                <a class="text2-bt-after">
+                $100.00 -<del class="valoralto"> $120,00</del></a>
+            </div>
+            <div class="container-pages-image-1">
+                <img src="./img/product-2.jpg" alt="Pink wave Cup">
+                <a class="text1-bt-after">Pink wave Cup</a>
+                <a class="text2-bt-after">
+                $100.00 -<del class="valoralto"> $120,00</del></a>
+            </div>
+            <div class="container-pages-image-1">
+                <img src="./img/product-3.jpg" alt="Tea and Chai">
+                <a class="text1-bt-after">Tea and Chai</a>
+                <a class="text2-bt-after">
+                $100.00 -<del class="valoralto"> $120,00</del></a>
+            </div>
+            <div class="container-pages-image-1">
+                <img src="./img/product-4.jpg" alt="">
+                <a class="text1-bt-after">Pink wave Cup</a>
+                <a class="text2-bt-after">
+                $100.00 -<del class="valoralto"> $120,00</del></a>
+            </div>
         </nav>
-        <div class="container-pages-image-1">
-            <img src="./img/cart-1.jpg" alt="Nature close tea">
-            <a class="text1-bt-after">Nature Close Tea</a>
-            <a class="text2-bt-after">
-            $100.00 -<del class="valoralto"> $120,00</del></a>
-        </div>
-        <div class="container-pages-image-1">
-            <img src="./img/cart-2.jpg" alt="">
-            <a class="text1-bt-after">Nature Close Tea</a>
-            <a class="text2-bt-after">
-            $100.00 -<del class="valoralto"> $120,00</del></a>
-        </div>
+        <nav class="container-intermedium">
+            <img scr="./img/testi.png">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed do eiusmod tempor incididunt ut labore.</p>
+            <br>
+            <a class="text1-bt-center">GREGORY PERKINS</a>
+            <span>Customer</span>
+        </nav>
+        <nav class="container-down">
+            <header>New Products</header>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit
+                    sed do eiusmod tempor incididunt.
+                </p>
+            <div class="container-pages-image-1">
+                <img src="./img/product-1.jpg" alt="">
+                <a class="text1-bt-after">Pink wave Cup</a>
+                <a class="text2-bt-after">
+                $100.00 -<del class="valoralto"> $120,00</del></a>
+            </div>
+            <div class="container-pages-image-1">
+                <img src="./img/product-2.jpg" alt="">
+                <a class="text1-bt-after">Pink wave Cup</a>
+                <a class="text2-bt-after">
+                $100.00 -<del class="valoralto"> $120,00</del></a>
+            </div>
+            <div class="container-pages-image-1">
+                <img src="./img/product-3.jpg" alt="">
+                <a class="text1-bt-after">Pink wave Cup</a>
+                <a class="text2-bt-after">
+                $100.00 -<del class="valoralto"> $120,00</del></a>
+            </div>
+            <div class="container-pages-image-1">
+                <img src="./img/product-4.jpg" alt="">
+                <a class="text1-bt-after">Pink wave Cup</a>
+                <a class="text2-bt-after">
+                $100.00 -<del class="valoralto"> $120,00</del></a>
+            </div>
+            <div class="container-pages-image-1">
+                <img src="./img/product-5.jpg" alt="">
+                <a class="text1-bt-after">Pink wave Cup</a>
+                <a class="text2-bt-after">
+                $100.00 -<del class="valoralto"> $120,00</del></a>
+            </div>
+            <div class="container-pages-image-1">
+                <img src="./img/product-6.jpg" alt="">
+                <a class="text1-bt-after">Pink wave Cup</a>
+                <a class="text2-bt-after">
+                $100.00 -<del class="valoralto"> $120,00</del></a>
+            </div>
+            <div class="container-pages-image-1">
+                <img src="./img/product-7.jpg" alt="">
+                <a class="text1-bt-after">Pink wave Cup</a>
+                <a class="text2-bt-after">
+                $100.00 -<del class="valoralto"> $120,00</del></a>
+            </div>
+            <div class="container-pages-image-1">
+                <img src="./img/product-8.jpg" alt="">
+                <a class="text1-bt-after">Pink wave Cup</a>
+                <a class="text2-bt-after">
+                $100.00 -<del class="valoralto"> $120,00</del></a>
+            </div>
+        </nav>
+        <nav>
+            
+        </nav>
     </section>
 
 </body>
