final home HTML

--- a/Index.html
+++ b/Index.html
@@ -12,6 +12,7 @@
     <title>SabujCha</title>
     <!--Custom Fonts-->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header class="main-header">
@@ -39,7 +40,7 @@
         </div>
     </header>
     <main>
-        <span>Want to stay healthy drink matcha.</span>
+        <h1>Want to stay healthy drink matcha.</h1>
         <a href="pages.html" class="top-shop">Shop Now</a>
     </main>
         <nav class="Banner-top">
@@ -55,9 +56,11 @@
     </main>
     <section>
         <nav class="container-pages">
-            <header>Latest Products</header>
+            <header>
+                <h1>Latest Products</h1>
                 <p>lore ipsum dolor sit amel,consectetur adipsicing elit sed do
                 ciusmod tempor incididunt.</p>
+            </header>
             <div class="container-pages-image-1">
                 <img src="./img/product-1.jpg" alt="Nature close tea">
                 <a class="text1-bt-after">Nature Close Tea</a>
@@ -87,67 +90,237 @@
             <img scr="./img/testi.png">
             <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed do eiusmod tempor incididunt ut labore.</p>
             <br>
-            <a class="text1-bt-center">GREGORY PERKINS</a>
-            <span>Customer</span>
+            <h5 class="text1-bt-center">GREGORY PERKINS</h5>
+            <h6>Customer</h6>
         </nav>
         <nav class="container-down">
-            <header>New Products</header>
+            <header>
+                <h1>New Products</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit
                     sed do eiusmod tempor incididunt.
                 </p>
+            </header>
             <div class="container-pages-image-1">
-                <img src="./img/product-1.jpg" alt="">
+                <img src="./img/product-1.jpg" alt=""><br>
+                <a class="text1-bt-after">Pink wave Cup</a><br>
+                <a class="text2-bt-after">
+                $100.00 -<del class="valoralto"> $120,00</del></a>
+            </div>
+            <div class="container-pages-image-1">
+                <img src="./img/product-2.jpg" alt=""><br>
+                <a class="text1-bt-after">Pink wave Cup</a><br>
+                <a class="text2-bt-after">
+                $100.00 -<del class="valoralto"> $120,00</del></a>
+            </div>
+            <div class="container-pages-image-1">
+                <img src="./img/product-3.jpg" alt=""><br>
+                <a class="text1-bt-after">Pink wave Cup</a><br>
+                <a class="text2-bt-after">
+                $100.00 -<del class="valoralto"> $120,00</del></a>
+            </div>
+            <div class="container-pages-image-1"><br>
+                <img src="./img/product-4.jpg" alt=""><br>
+                <a class="text1-bt-after">Pink wave Cup</a>
+                <a class="text2-bt-after">
+                $100.00 -<del class="valoralto"> $120,00</del></a>
+            </div>
+            <div class="container-pages-image-1"><br>
+                <img src="./img/product-5.jpg" alt=""><br>
                 <a class="text1-bt-after">Pink wave Cup</a>
                 <a class="text2-bt-after">
                 $100.00 -<del class="valoralto"> $120,00</del></a>
             </div>
             <div class="container-pages-image-1">
-                <img src="./img/product-2.jpg" alt="">
-                <a class="text1-bt-after">Pink wave Cup</a>
+                <img src="./img/product-6.jpg" alt=""><br>
+                <a class="text1-bt-after">Pink wave Cup</a><br>
                 <a class="text2-bt-after">
                 $100.00 -<del class="valoralto"> $120,00</del></a>
             </div>
             <div class="container-pages-image-1">
-                <img src="./img/product-3.jpg" alt="">
+                <img src="./img/product-7.jpg" alt=""><br>
                 <a class="text1-bt-after">Pink wave Cup</a>
+                <br>
                 <a class="text2-bt-after">
                 $100.00 -<del class="valoralto"> $120,00</del></a>
             </div>
             <div class="container-pages-image-1">
-                <img src="./img/product-4.jpg" alt="">
+                <img src="./img/product-8.jpg" alt=""><br>
                 <a class="text1-bt-after">Pink wave Cup</a>
-                <a class="text2-bt-after">
-                $100.00 -<del class="valoralto"> $120,00</del></a>
-            </div>
-            <div class="container-pages-image-1">
-                <img src="./img/product-5.jpg" alt="">
-                <a class="text1-bt-after">Pink wave Cup</a>
-                <a class="text2-bt-after">
-                $100.00 -<del class="valoralto"> $120,00</del></a>
-            </div>
-            <div class="container-pages-image-1">
-                <img src="./img/product-6.jpg" alt="">
-                <a class="text1-bt-after">Pink wave Cup</a>
-                <a class="text2-bt-after">
-                $100.00 -<del class="valoralto"> $120,00</del></a>
-            </div>
-            <div class="container-pages-image-1">
-                <img src="./img/product-7.jpg" alt="">
-                <a class="text1-bt-after">Pink wave Cup</a>
-                <a class="text2-bt-after">
-                $100.00 -<del class="valoralto"> $120,00</del></a>
-            </div>
-            <div class="container-pages-image-1">
-                <img src="./img/product-8.jpg" alt="">
-                <a class="text1-bt-after">Pink wave Cup</a>
+                <br>
                 <a class="text2-bt-after">
                 $100.00 -<del class="valoralto"> $120,00</del></a>
             </div>
         </nav>
-        <nav>
-            
+        <nav class="newletter">
+            <h1> Join to our Newsletter</h1>
+            <div class="email-subscribe">
+                <input type="email" placeholder="Your Email Address*">
+                <button>SUBSCRIBE</button>
+            </div>
+        </nav>
+        <nav class="Blog-New">
+            <h1>Latest News</h1>
+            <div class="container-Blog">
+                <div class="container-blog-image">
+                    <img src="./img/blog-single-1.jpg" alt=""><br>
+                    <a class="fecha">14 Sep</a>
+                    <br>
+                    <h2>Lorem ipsum sit ame co.</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, 
+                        sed do eius tempor incididunt ut labore et dolore</p>
+                    <button>READ MORE</button>
+                </div>
+            </div>
+            <div class="container-blog-image">
+                <img src="./img/blog-single-2.jpg" alt=""><br>
+                <a class="fecha">20 Dec</a>
+                <br>
+                <h2>Lorem ipsum sit ame co.</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, 
+                    sed do eius tempor incididunt ut labore et dolore</p>
+                <button>READ MORE</button>
+            </div>
+            <div class="container-blog-image">
+                <img src="./img/blog-single-3.jpg" alt=""><br>
+                <a class="fecha">18 Aug</a>
+                <br>
+                <h2>Lorem ipsum sit ame co.</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, 
+                    sed do eius tempor incididunt ut labore et dolore</p>
+                <button>READ MORE</button>
+            </div>
+        </nav>
+        <nav class="imagenes-lastdown">
+            <img src="./img/1.jpg">
+            <img src="./img/2.jpg">
+            <img src="./img/3.jpg">
+            <img src="./img/4.jpg">
+            <img src="./img/5.jpg">
         </nav>
     </section>
-
+    <footer>
+        <div class="footer-navigation-inner">
+            <ul class="nav-main">
+                <li class="nav-main-item title">
+                    <h3 class="nav-main-title">My Account</h3>                          </p>
+                </li>
+                <li class="nav-main-item visible">
+                    <a class="nav-main-link" href="" >
+                        My Account                        </a>
+                </li>
+                <li class="nav-main-item visible">
+                    <a class="nav-main-link" href="" >
+                        Order History                        </a>
+                </li>
+                <li class="nav-main-item visible">
+                    <a class="nav-main-link" href="">
+                        WishList                       </a>
+                </li>
+                <li class="nav-main-item visible">
+                    <a class="nav-main-link" href="">
+                        Newsletter                       </a>
+                </li>
+                <li class="nav-main-item visible">
+                    <a class="nav-main-link" href="">
+                        Order History                        </a>
+                </li>
+                <li class="nav-main-item visible">
+                    <a class="nav-main-link"  href="">
+                        International Orders                      </a>
+                </li>
+            </ul>
+            <ul class="nav-main">
+                <li class="nav-main-item title">
+                    <h3 class="nav-main-title">Information</h3>                            </p>
+                </li>
+                    <li class="nav-main-item visible">
+                <a class="nav-main-link" href="">
+                        Flow                        </a>
+                </li>
+                    <li class="nav-main-item visible">
+                    <a class="nav-main-link" href="">
+                        Delivery Information                   </a>
+                </li>
+                    <li class="nav-main-item visible">
+                    <a class="nav-main-link" href="">
+                        Privacy Policy                       </a>
+                </li>
+                <li class="nav-main-item visible">
+                    <a class="nav-main-link" href="">
+                        Terms & Conditions                        </a>
+                </li>
+                <li class="nav-main-item visible">
+                    <a class="nav-main-link" href="">
+                        Customer Service                       </a>
+                </li>
+                <li class="nav-main-item visible">
+                    <a class="nav-main-link"  href="">
+                        Return Policy                     </a>
+                </li>
+            </ul>
+            <ul class="nav-main">
+                <li class="nav-main-item title">
+                    <h3 class="nav-main-title">Quick Links</h3>                          </p>
+                </li>
+                <li class="nav-main-item visible">
+                    <a class="nav-main-link" href="" >
+                        Support Center                      </a>
+                </li>
+                <li class="nav-main-item visible">
+                    <a class="nav-main-link" href="" >
+                        Term & Conditions                        </a>
+                </li>
+                <li class="nav-main-item visible">
+                    <a class="nav-main-link" href="">
+                        Shipping                      </a>
+                </li>
+                <li class="nav-main-item visible">
+                    <a class="nav-main-link" href="">
+                        Privacy Policy                      </a>
+                </li>
+                <li class="nav-main-item visible">
+                    <a class="nav-main-link" href="">
+                        Help                       </a>
+                </li>
+                <li class="nav-main-item visible">
+                    <a class="nav-main-link"  href="">
+                        FAQS                      </a>
+                </li>
+            </ul>
+            <ul class="nav-main">
+                <li class="nav-main-item title">
+                    <h3 class="nav-main-title">Contact Us</h3>                          </p>
+                </li>
+                <li class="nav-main-item visible">
+                    <a class="nav-main-link" href="" >
+                        Your address goes here                      </a>
+                </li>
+                <li class="nav-main-item visible">
+                    <a class="nav-main-link" href="" >
+                        0123456789                     </a>
+                </li>
+                <li class="nav-main-item visible">
+                    <a class="nav-main-link" href="">
+                        0123456789                       </a>
+                </li>
+                <li class="nav-main-item visible">
+                    <a class="nav-main-link" href="">
+                        demo@example.com                    </a>
+                </li>
+                <li class="nav-main-item visible">
+                    <a class="nav-main-link" href="">
+                        demo@example.com                        </a>
+                </li>
+            </ul>
+        </div>
+        <div class="Legal-list-item copyright">© 2023
+            <h3>SabujCha</h3>
+            <span>Made With <i style="font-size:14px" class="fa">&#xf004;</i> By</span>
+            <h3>HasThemes</h3>
+        </div>
+        <div>
+            <img src="./img/payment.png">
+        </div>
+    </footer>
 </body>
 </html>
