--- a/Index.html
+++ b/Index.html
@@ -6,161 +6,167 @@
     <!--Dimensiones de la pagina mobil y en escritorio.-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/Style.css">
     <link rel="stylesheet" href="css/menu.css">
     <!--Titulo de la pagina-->
     <title>SabujCha</title>
     <!--Custom Fonts-->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora&family=Playfair+Display&family=Work+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="main-header">
-        <div class="zerogrid">
-            <div class="top">
-                <div class="logo">
-                    <a class="site-branding" href="index.html">
-                        <img src="./img/logo.png" />
-                    </a>
-                    <!-- .site-branding -->
-                </div>
-                <div class="col-2-3">
+    <header>
                     <!-- Menu-main -->
-                    <div id='cssmenu' class="align-right">
-                        <ul>
-                            <li class="active"><a href='Index.html'><span>HOME</span></a></li>
-                            <li><a href='single.html'><span>ABOUT</span></a></li>
-                            <li><a href='archive.html'><span>BLOG</span></a></li>
-                            <li><a href='pages.html'><span>PAGES</span></a></li>
-                            <li class='last'><a href='contact.html'><span>CONTACT</span></a></li>
-                        </ul>
-                    </div>
+        <nav class="main-header">
+            <ul class="menu">
+                <li><a href="Index.html">HOME</a></li>
+                <li><a href="archive.html">ABOUT</a></li>
+                <li><a href="#">BLOG</a></li>
+                <li><a href="#">PAGES</a></li>
+                <li><a href=".Prueba">CONTACT</a></li>
+            </ul>
+        </nav>
+                <!-- Logo-en-el-header-->
+        <div class="logo-header">
+            <a href="Index.html"><img src="../img/logo.png" alt="Logo SabujCha"></a>
+        </div>
+        <!-- imagen-de-carrito-y-opciones-de-moneda-->
+        <div class="carrito">
+            <select class="moneda"><option value="USD" class="buthon-moneda">USD</option><option value="PES" class="buthon-moneda">PES</option></select>
+            <a href="#"><img src="./img/car-shop.PNG" alt=""></a>
+        </div>
+    </header>
+    <main class="top-page-imagen">
+        <div class="imagenbackground1">
+            <h1 class="top-page-text">Want to stay healthy<br> drink matcha.</h1>
+            <a href="pages.html" id="top-shop">Shop Now</a>
+        </div>
+    </main>
+    <div class="Banner-top">
+        <div class="text1">
+            <a class="Descuento">-50% Sale</a>
+                <span>SUMMER VACATION</span>
+                
+            </div>
+            <div class="text2">
+                <a class="Descuento">-20% Sale</a>
+                <span>WINTER VACATION</span>
+            </div>
+        </div>
+    <section>
+        <div class="container-pages">
+            <header class="container-titule">
+                <h1 id="">Latest Products</h1>
+                <p>lore ipsum dolor sit amel,consectetur adipsicing elit sed do<br>
+                ciusmod tempor incididunt.</p>
+            </header>
+            <div class="producto-latest">
+                <div class="container-pages-image-1">
+                    <img src="./img/product-1.jpg" alt="Nature close tea"><br>
+                    <a class="titulo_producto">Nature Close Tea</a><br> 
+                    <a class="text2-bt-after">
+                    $100.00 -<del class="valoralto"> $120,00</del></a>
+                </div>
+                <div class="container-pages-image-1">
+                    <img src="./img/product-2.jpg" alt="Pink wave Cup"><br>
+                    <a class="titulo_producto">Pink wave Cup</a><br>
+                    <a class="text2-bt-after">
+                    $100.00 -<del class="valoralto"> $120,00</del></a>
+                </div>
+                <div class="container-pages-image-1">
+                    <img src="./img/product-3.jpg" alt="Tea and Chai"><br>
+                    <a class="titulo_producto">Tea and Chai</a><br>
+                    <a class="text2-bt-after">
+                    $100.00 -<del class="valoralto"> $120,00</del></a>
+                </div>
+                <div class="container-pages-image-1">
+                    <img src="./img/product-4.jpg" alt=""><br>
+                    <a class="titulo_producto">Pink wave Cup</a><br>
+                    <a class="text2-bt-after">
+                    $100.00 -<del class="valoralto"> $120,00</del></a>
                 </div>
             </div>
         </div>
-    </header>
-    <main>
-        <h1>Want to stay healthy drink matcha.</h1>
-        <a href="pages.html" class="top-shop">Shop Now</a>
-    </main>
-        <nav class="Banner-top">
-            <div class="image-1">
-                <img src="./img/banner-1.png"><a class="Descuento">-50% Sale</a>
-                <span>SUMMER VACATION</span>
-            </div>
-            <div class="image-1">
-                <img src="./img/banner-2.png"><a class="Descuento">-20% Sale</a>
-                <span>WINTER VACATION</span>
-            </div>
-        </nav>
-    </main>
-    <section>
-        <nav class="container-pages">
-            <header>
-                <h1>Latest Products</h1>
-                <p>lore ipsum dolor sit amel,consectetur adipsicing elit sed do
-                ciusmod tempor incididunt.</p>
-            </header>
-            <div class="container-pages-image-1">
-                <img src="./img/product-1.jpg" alt="Nature close tea">
-                <a class="text1-bt-after">Nature Close Tea</a>
-                <a class="text2-bt-after">
-                $100.00 -<del class="valoralto"> $120,00</del></a>
-            </div>
-            <div class="container-pages-image-1">
-                <img src="./img/product-2.jpg" alt="Pink wave Cup">
-                <a class="text1-bt-after">Pink wave Cup</a>
-                <a class="text2-bt-after">
-                $100.00 -<del class="valoralto"> $120,00</del></a>
-            </div>
-            <div class="container-pages-image-1">
-                <img src="./img/product-3.jpg" alt="Tea and Chai">
-                <a class="text1-bt-after">Tea and Chai</a>
-                <a class="text2-bt-after">
-                $100.00 -<del class="valoralto"> $120,00</del></a>
-            </div>
-            <div class="container-pages-image-1">
-                <img src="./img/product-4.jpg" alt="">
-                <a class="text1-bt-after">Pink wave Cup</a>
-                <a class="text2-bt-after">
-                $100.00 -<del class="valoralto"> $120,00</del></a>
-            </div>
-        </nav>
-        <nav class="container-intermedium">
-            <img scr="./img/testi.png">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed do eiusmod tempor incididunt ut labore.</p>
-            <br>
-            <h5 class="text1-bt-center">GREGORY PERKINS</h5>
-            <h6>Customer</h6>
-        </nav>
-        <nav class="container-down">
-            <header>
+        <div class="container-intermedium">
+            <img src="./img/testi.png" class="imagen-text">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed do <br> eiusmod tempor incididunt ut labore.</p>
+            <h4 class="text1-bt-center">GREGORY PERKINS</h4>
+            <span class="text2-bt-center">Customer</span>
+        </div>
+        <div class="container-down">
+            <header class="container-titule">
                 <h1>New Products</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit
                     sed do eiusmod tempor incididunt.
                 </p>
             </header>
-            <div class="container-pages-image-1">
-                <img src="./img/product-1.jpg" alt=""><br>
-                <a class="text1-bt-after">Pink wave Cup</a><br>
-                <a class="text2-bt-after">
-                $100.00 -<del class="valoralto"> $120,00</del></a>
+            <div class="product-page">
+                <div class="container-pages-image-1">
+                    <a class="porce-1" href="#"><img src="./img/product-1.jpg" alt="">
+                    <p>-30%</p>
+                    </a>
+                    <br>
+                    <a class="titulo_producto">Pink wave Cup</a><br>
+                    <a class="text2-bt-after">
+                    $100.00 -<del class="valoralto"> $120,00</del></a>
+                </div>
+                <div class="container-pages-image-1">
+                    <img src="./img/product-2.jpg" alt=""><br>
+                    <a class="titulo_producto">Pink wave Cup</a><br>
+                    <a class="text2-bt-after">
+                    $100.00 -<del class="valoralto"> $120,00</del></a>
+                </div>
+                <div class="container-pages-image-1">
+                    <img src="./img/product-3.jpg" alt=""><br>
+                    <a class="titulo_producto">Pink wave Cup</a><br>
+                    <a class="text2-bt-after">
+                    $100.00 -<del class="valoralto"> $120,00</del></a>
+                </div>
+                <div class="container-pages-image-1">
+                    <img src="./img/product-4.jpg" alt=""><br>
+                    <a class="titulo_producto">Pink wave Cup</a><br>
+                    <a class="text2-bt-after">
+                    $100.00 -<del class="valoralto"> $120,00</del></a>
+                </div>
+                <div class="container-pages-image-1">
+                    <img src="./img/product-5.jpg" alt=""><br>
+                    <a class="titulo_producto">Pink wave Cup</a><br>
+                    <a class="text2-bt-after">
+                    $100.00 -<del class="valoralto"> $120,00</del></a>
+                </div>
+                <div class="container-pages-image-1">
+                    <img src="./img/product-6.jpg" alt=""><br>
+                    <a class="titulo_producto">Pink wave Cup</a><br>
+                    <a class="text2-bt-after">
+                    $100.00 -<del class="valoralto"> $120,00</del></a>
+                </div>
+                <div class="container-pages-image-1">
+                    <img src="./img/product-7.jpg" alt=""><br>
+                    <a class="titulo_producto">Pink wave Cup</a>
+                    <br>
+                    <a class="text2-bt-after">
+                    $100.00 -<del class="valoralto"> $120,00</del></a>
+                </div>
+                <div class="container-pages-image-1">
+                    <img src="./img/product-8.jpg" alt=""><br>
+                    <a class="text1-bt-after">Pink wave Cup</a>
+                    <br>
+                    <a class="text2-bt-after">
+                    $100.00 -<del class="valoralto"> $120,00</del></a>
+                </div>
             </div>
-            <div class="container-pages-image-1">
-                <img src="./img/product-2.jpg" alt=""><br>
-                <a class="text1-bt-after">Pink wave Cup</a><br>
-                <a class="text2-bt-after">
-                $100.00 -<del class="valoralto"> $120,00</del></a>
-            </div>
-            <div class="container-pages-image-1">
-                <img src="./img/product-3.jpg" alt=""><br>
-                <a class="text1-bt-after">Pink wave Cup</a><br>
-                <a class="text2-bt-after">
-                $100.00 -<del class="valoralto"> $120,00</del></a>
-            </div>
-            <div class="container-pages-image-1"><br>
-                <img src="./img/product-4.jpg" alt=""><br>
-                <a class="text1-bt-after">Pink wave Cup</a>
-                <a class="text2-bt-after">
-                $100.00 -<del class="valoralto"> $120,00</del></a>
-            </div>
-            <div class="container-pages-image-1"><br>
-                <img src="./img/product-5.jpg" alt=""><br>
-                <a class="text1-bt-after">Pink wave Cup</a>
-                <a class="text2-bt-after">
-                $100.00 -<del class="valoralto"> $120,00</del></a>
-            </div>
-            <div class="container-pages-image-1">
-                <img src="./img/product-6.jpg" alt=""><br>
-                <a class="text1-bt-after">Pink wave Cup</a><br>
-                <a class="text2-bt-after">
-                $100.00 -<del class="valoralto"> $120,00</del></a>
-            </div>
-            <div class="container-pages-image-1">
-                <img src="./img/product-7.jpg" alt=""><br>
-                <a class="text1-bt-after">Pink wave Cup</a>
-                <br>
-                <a class="text2-bt-after">
-                $100.00 -<del class="valoralto"> $120,00</del></a>
-            </div>
-            <div class="container-pages-image-1">
-                <img src="./img/product-8.jpg" alt=""><br>
-                <a class="text1-bt-after">Pink wave Cup</a>
-                <br>
-                <a class="text2-bt-after">
-                $100.00 -<del class="valoralto"> $120,00</del></a>
-            </div>
-        </nav>
-        <nav class="newletter">
+        </div>
+        <div class="newletter">
             <h1> Join to our Newsletter</h1>
             <div class="email-subscribe">
                 <input type="email" placeholder="Your Email Address*">
                 <button>SUBSCRIBE</button>
             </div>
-        </nav>
-        <nav class="Blog-New">
+        </div>
+        <div class="Blog-New">
             <h1>Latest News</h1>
-            <div class="container-Blog">
+            <div class="product-Blog">
                 <div class="container-blog-image">
                     <img src="./img/blog-single-1.jpg" alt=""><br>
                     <a class="fecha">14 Sep</a>
@@ -170,35 +176,35 @@
                         sed do eius tempor incididunt ut labore et dolore</p>
                     <button>READ MORE</button>
                 </div>
+                <div class="container-blog-image2">
+                    <img src="./img/blog-single-2.jpg" alt=""><br>
+                    <a class="fecha">20 Dec</a>
+                    <br>
+                    <h2>Lorem ipsum sit ame co.</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, 
+                        sed do eius tempor incididunt ut labore et dolore</p>
+                    <button>READ MORE</button>
+                </div>
+                <div class="container-blog-image3">
+                    <img src="./img/blog-single-3.jpg" alt=""><br>
+                    <a class="fecha">18 Aug</a>
+                    <br>
+                    <h2>Lorem ipsum sit ame co.</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, 
+                        sed do eius tempor incididunt ut labore et dolore</p>
+                    <button>READ MORE</button>
+                </div>
             </div>
-            <div class="container-blog-image">
-                <img src="./img/blog-single-2.jpg" alt=""><br>
-                <a class="fecha">20 Dec</a>
-                <br>
-                <h2>Lorem ipsum sit ame co.</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, 
-                    sed do eius tempor incididunt ut labore et dolore</p>
-                <button>READ MORE</button>
-            </div>
-            <div class="container-blog-image">
-                <img src="./img/blog-single-3.jpg" alt=""><br>
-                <a class="fecha">18 Aug</a>
-                <br>
-                <h2>Lorem ipsum sit ame co.</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, 
-                    sed do eius tempor incididunt ut labore et dolore</p>
-                <button>READ MORE</button>
-            </div>
-        </nav>
-        <nav class="imagenes-lastdown">
+        </div>
+        <div class="imagenes-lastdown">
             <img src="./img/1.jpg">
             <img src="./img/2.jpg">
             <img src="./img/3.jpg">
             <img src="./img/4.jpg">
             <img src="./img/5.jpg">
-        </nav>
+        </div>
     </section>
-    <footer>
+    <footer class="Prueba">
         <div class="footer-navigation-inner">
             <ul class="nav-main">
                 <li class="nav-main-item title">
@@ -313,13 +319,13 @@
                 </li>
             </ul>
         </div>
-        <div class="Legal-list-item copyright">© 2023
-            <h3>SabujCha</h3>
-            <span>Made With <i style="font-size:14px" class="fa">&#xf004;</i> By</span>
-            <h3>HasThemes</h3>
-        </div>
-        <div>
+        <div id="footer-legal-down">
+            <div class="Legal-left">
+                <small>© 2021 <b>SabujCha</b> Made With  By <b>HasThemes</b> </small>
+            </div>
+            <div>
             <img src="./img/payment.png">
+            </div>
         </div>
     </footer>
 </body>
