--- a/Index.html
+++ b/Index.html
@@ -10,22 +10,31 @@
     <link rel="stylesheet" href="css/menu.css">
     <!--Titulo de la pagina-->
     <title>SabujCha</title>
+    <link rel="icon" href="./img/logo-pestaña.ico">
     <!--Custom Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Playfair+Display&family=Work+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <header>
                     <!-- Menu-main -->
         <nav class="main-header">
+                            <!--main-hamburger-->
+            <input type="checkbox" id="check">
+            <label for="check" class="bar-btn">
+                <i class="material-icons">&#xe5d2;</i>
+            </label>
             <ul class="menu">
                 <li><a href="Index.html">HOME</a></li>
-                <li><a href="archive.html">ABOUT</a></li>
+                <li><a href="#">ABOUT</a></li>
                 <li><a href="#">BLOG</a></li>
-                <li><a href="#">PAGES</a></li>
-                <li><a href=".Prueba">CONTACT</a></li>
+                <li><a href="pages.html">PAGES</a></li>
+                <li><a href="#Prueba">CONTACT</a></li>
             </ul>
+            
         </nav>
                 <!-- Logo-en-el-header-->
         <div class="logo-header">
@@ -42,18 +51,17 @@
             <h1 class="top-page-text">Want to stay healthy<br> drink matcha.</h1>
             <a href="pages.html" id="top-shop">Shop Now</a>
         </div>
-    </main>
-    <div class="Banner-top">
-        <div class="text1">
+        <div class="Banner-top">
+            <div class="text1">
             <a class="Descuento">-50% Sale</a>
                 <span>SUMMER VACATION</span>
-                
             </div>
             <div class="text2">
                 <a class="Descuento">-20% Sale</a>
                 <span>WINTER VACATION</span>
             </div>
         </div>
+    </main>
     <section>
         <div class="container-pages">
             <header class="container-titule">
@@ -63,28 +71,40 @@
             </header>
             <div class="producto-latest">
                 <div class="container-pages-image-1">
-                    <img src="./img/product-1.jpg" alt="Nature close tea"><br>
-                    <a class="titulo_producto">Nature Close Tea</a><br> 
-                    <a class="text2-bt-after">
-                    $100.00 -<del class="valoralto"> $120,00</del></a>
+                    <a class="porce" href="#"><img src="./img/product-1.jpg" alt="">
+                        <p>-60%</p>
+                        </a>
+                        <br>
+                        <a class="titulo_producto">Nature Close Tea</a><br>
+                        <a class="text2-bt-after">
+                        <br>$100.00 -<del class="valoralto"> $120,00</del></a>
                 </div>
                 <div class="container-pages-image-1">
-                    <img src="./img/product-2.jpg" alt="Pink wave Cup"><br>
-                    <a class="titulo_producto">Pink wave Cup</a><br>
-                    <a class="text2-bt-after">
-                    $100.00 -<del class="valoralto"> $120,00</del></a>
+                    <a class="porce" href="#"><img src="./img/product-2.jpg" alt="">
+                        <p id="desc-none">-60%</p>
+                        </a>
+                        <br>
+                        <a class="titulo_producto">Pink wave Cup</a><br>
+                        <a class="text2-bt-after">
+                        <br>$100.00 -<del class="valoralto"> $120,00</del></a>
                 </div>
                 <div class="container-pages-image-1">
-                    <img src="./img/product-3.jpg" alt="Tea and Chai"><br>
-                    <a class="titulo_producto">Tea and Chai</a><br>
-                    <a class="text2-bt-after">
-                    $100.00 -<del class="valoralto"> $120,00</del></a>
+                    <a class="porce" href="#"><img src="./img/product-3.jpg" alt="">
+                        <p>-50%</p>
+                        </a>
+                        <br>
+                        <a class="titulo_producto">Tea and Chai</a><br>
+                        <a class="text2-bt-after">
+                        <br>$100.00 -<del class="valoralto"> $120,00</del></a>
                 </div>
                 <div class="container-pages-image-1">
-                    <img src="./img/product-4.jpg" alt=""><br>
-                    <a class="titulo_producto">Pink wave Cup</a><br>
-                    <a class="text2-bt-after">
-                    $100.00 -<del class="valoralto"> $120,00</del></a>
+                    <a class="porce" href="#"><img src="./img/product-4.jpg" alt="">
+                        <p id="desc-none">-60%</p>
+                        </a>
+                        <br>
+                        <a class="titulo_producto">Pearly Everlasting</a><br>
+                        <a class="text2-bt-after">
+                        <br>$100.00 -<del class="valoralto"> $120,00</del></a>
                 </div>
             </div>
         </div>
@@ -112,49 +132,65 @@
                     $100.00 -<del class="valoralto"> $120,00</del></a>
                 </div>
                 <div class="container-pages-image-1">
-                    <img src="./img/product-2.jpg" alt=""><br>
-                    <a class="titulo_producto">Pink wave Cup</a><br>
-                    <a class="text2-bt-after">
-                    $100.00 -<del class="valoralto"> $120,00</del></a>
+                    <a class="porce-1" href="#"><img src="./img/product-2.jpg" alt="">
+                        <p>-60%</p>
+                        </a>
+                        <br>
+                        <a class="titulo_producto">Que herbal Tea</a><br>
+                        <a class="text2-bt-after">
+                        $100.00 -<del class="valoralto"> $120,00</del></a>
                 </div>
                 <div class="container-pages-image-1">
-                    <img src="./img/product-3.jpg" alt=""><br>
-                    <a class="titulo_producto">Pink wave Cup</a><br>
-                    <a class="text2-bt-after">
-                    $100.00 -<del class="valoralto"> $120,00</del></a>
+                    <a class="porce-1" href="#"><img src="./img/product-3.jpg" alt="">
+                        <p id="desc-none">-60%</p>
+                        </a>
+                        <br>
+                        <a class="titulo_producto">Que herbal Tea</a><br>
+                        <a class="text2-bt-after">
+                        $100.00 -<del class="valoralto"> $120,00</del></a>
                 </div>
                 <div class="container-pages-image-1">
-                    <img src="./img/product-4.jpg" alt=""><br>
-                    <a class="titulo_producto">Pink wave Cup</a><br>
-                    <a class="text2-bt-after">
-                    $100.00 -<del class="valoralto"> $120,00</del></a>
+                    <a class="porce-1" href="#"><img src="./img/product-4.jpg" alt="">
+                        <p>-60%</p>
+                        </a>
+                        <br>
+                        <a class="titulo_producto">Que herbal Tea</a><br>
+                        <a class="text2-bt-after">
+                        $100.00 -<del class="valoralto"> $120,00</del></a>
                 </div>
                 <div class="container-pages-image-1">
-                    <img src="./img/product-5.jpg" alt=""><br>
-                    <a class="titulo_producto">Pink wave Cup</a><br>
-                    <a class="text2-bt-after">
-                    $100.00 -<del class="valoralto"> $120,00</del></a>
+                    <a class="porce-1" href="#"><img src="./img/product-5.jpg" alt="">
+                        <p>-50%</p>
+                        </a>
+                        <br>
+                        <a class="titulo_producto">Que herbal Tea</a><br>
+                        <a class="text2-bt-after">
+                        $100.00 -<del class="valoralto"> $120,00</del></a>
                 </div>
                 <div class="container-pages-image-1">
-                    <img src="./img/product-6.jpg" alt=""><br>
-                    <a class="titulo_producto">Pink wave Cup</a><br>
-                    <a class="text2-bt-after">
-                    $100.00 -<del class="valoralto"> $120,00</del></a>
-                </div>
+                    <a class="porce-1" href="#"><img src="./img/product-6.jpg" alt="">
+                        <p id="desc-none">-60%</p>
+                        </a>
+                        <br>
+                        <a class="titulo_producto">Que herbal Tea</a><br>
+                        <a class="text2-bt-after">
+                        $100.00 -<del class="valoralto"> $120,00</del></a>                </div>
                 <div class="container-pages-image-1">
-                    <img src="./img/product-7.jpg" alt=""><br>
-                    <a class="titulo_producto">Pink wave Cup</a>
-                    <br>
-                    <a class="text2-bt-after">
-                    $100.00 -<del class="valoralto"> $120,00</del></a>
-                </div>
+                    <a class="porce-1" href="#"><img src="./img/product-7.jpg" alt="">
+                        <p>-40%</p>
+                        </a>
+                        <br>
+                        <a class="titulo_producto">Que herbal Tea</a><br>
+                        <a class="text2-bt-after">
+                        $100.00 -<del class="valoralto"> $120,00</del></a>                </div>
                 <div class="container-pages-image-1">
-                    <img src="./img/product-8.jpg" alt=""><br>
-                    <a class="text1-bt-after">Pink wave Cup</a>
-                    <br>
-                    <a class="text2-bt-after">
-                    $100.00 -<del class="valoralto"> $120,00</del></a>
-                </div>
+                    <a class="porce-1" href="#"><img src="./img/product-8.jpg" alt="">
+                        <p id="desc-none">-60%</p>
+                        </a>
+                        <br>
+                        <a class="titulo_producto">Que herbal Tea</a><br>
+                        <a class="text2-bt-after">
+                        $100.00 -<del class="valoralto"> $120,00</del></a>                </div>
             </div>
         </div>
         <div class="newletter">
@@ -169,30 +205,36 @@
             <div class="product-Blog">
                 <div class="container-blog-image">
                     <img src="./img/blog-single-1.jpg" alt=""><br>
-                    <a class="fecha">14 Sep</a>
+                    <a class="fecha" href="#">14 Sep</a>
                     <br>
                     <h2>Lorem ipsum sit ame co.</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, 
-                        sed do eius tempor incididunt ut labore et dolore</p>
-                    <button>READ MORE</button>
+                    <p class="text-bt-down">Lorem ipsum dolor sit amet, consectetur 
+                        <br>adipisici elit, sed do eius tempor 
+                        <br>incididunt ut labore et dolore</p>
+                        <br>
+                    <button class="button-blog">READ MORE</button>
                 </div>
                 <div class="container-blog-image2">
                     <img src="./img/blog-single-2.jpg" alt=""><br>
-                    <a class="fecha">20 Dec</a>
+                    <a class="fecha" href="#">20 Dec</a>
                     <br>
                     <h2>Lorem ipsum sit ame co.</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, 
-                        sed do eius tempor incididunt ut labore et dolore</p>
-                    <button>READ MORE</button>
+                    <p class="text-bt-down">Lorem ipsum dolor sit amet, consectetur 
+                        <br>adipisici elit, sed do eius tempor 
+                        <br>incididunt ut labore et dolore</p>
+                        <br>
+                    <button class="button-blog">READ MORE</button>
                 </div>
                 <div class="container-blog-image3">
                     <img src="./img/blog-single-3.jpg" alt=""><br>
-                    <a class="fecha">18 Aug</a>
+                    <a class="fecha" href="#">18 Aug</a>
                     <br>
                     <h2>Lorem ipsum sit ame co.</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, 
-                        sed do eius tempor incididunt ut labore et dolore</p>
-                    <button>READ MORE</button>
+                    <p class="text-bt-down">Lorem ipsum dolor sit amet, consectetur 
+                        <br>adipisici elit, sed do eius tempor 
+                        <br>incididunt ut labore et dolore</p>
+                        <br>
+                    <button class="button-blog" href="archive.html">READ MORE</button>
                 </div>
             </div>
         </div>
@@ -204,7 +246,7 @@
             <img src="./img/5.jpg">
         </div>
     </section>
-    <footer class="Prueba">
+    <footer class="Prueba" id="Prueba">
         <div class="footer-navigation-inner">
             <ul class="nav-main">
                 <li class="nav-main-item title">
@@ -321,7 +363,7 @@
         </div>
         <div id="footer-legal-down">
             <div class="Legal-left">
-                <small>© 2021 <b>SabujCha</b> Made With  By <b>HasThemes</b> </small>
+                <small>© 2021 <b>SabujCha</b> Made With  By <i class="fa fa-heart" style="font-size:1.1vw;color:red"> </i> <b>HasThemes</b> </small>
             </div>
             <div>
             <img src="./img/payment.png">
