--- a/single.html
+++ b/single.html
@@ -14,29 +14,31 @@
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <header class="main-header">
-        <div class="zerogrid">
-            <div class="row">
-                <div class="logo">
-                    <a class="site-branding" href="index.html">
-                        <img src="./img/logo.png" />
-                    </a>
-                    <!-- .site-branding -->
-                </div>
-                <div class="col-2-3">
-                    <!-- Menu-main -->
-                    <div id='cssmenu' class="align-right">
-                        <ul>
-                            <li class="active"><a href='Index.html'><span>HOME</span></a></li>
-                            <li><a href='single.html'><span>ABOUT</span></a></li>
-                            <li><a href='archive.html'><span>BLOG</span></a></li>
-                            <li><a href='pages.html'><span>PAGES</span></a></li>
-                            <li class='last'><a href='contact.html'><span>CONTACT</span></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+    <header>
+            <!-- Menu-main -->
+        <nav class="main-header">
+            <ul class="menu">
+                <li><a href="Index.html">HOME</a></li>
+                <li><a href="archive.html">ABOUT</a></li>
+                <li><a href="#">BLOG</a></li>
+                <li><a href="#">PAGES</a></li>
+                <li><a href=".Prueba">CONTACT</a></li>
+            </ul>
+        </nav>
+            <!-- Logo-en-el-header-->
+        <div class="logo-header">
+            <a href="Index.html"><img src="../img/logo.png" alt="Logo SabujCha"></a>
+        </div>
+            <!-- imagen-de-carrito-y-opciones-de-moneda-->
+        <div class="carrito">
+            <select class="moneda"><option value="USD" class="buthon-moneda">USD</option><option value="PES" class="buthon-moneda">PES</option></select>
+            <a href="#"><img src="./img/car-shop.PNG" alt=""></a>
         </div>
     </header>
+    <main class="imagenbackground1">
+        <h1 class="top-page-text">Want to stay healthy<br> drink matcha.</h1>
+        <a href="pages.html" id="top-shop">Shop Now</a>
+    </main>
+
 </body>
 </html>
