--- a/Index.html
+++ b/Index.html
@@ -52,7 +52,7 @@
             <a href="pages.html" id="top-shop">Shop Now</a>
         </div>
         <div class="Banner-top">
-            <div class="text1">
+            <div class="text1" id="box1">
             <a class="Descuento">-50% Sale</a>
                 <span>SUMMER VACATION</span>
             </div>
@@ -65,13 +65,13 @@
     <section>
         <div class="container-pages">
             <header class="container-titule">
-                <h1 id="">Latest Products</h1>
+                <h1 id="titulo_producto">Latest Products</h1>
                 <p>lore ipsum dolor sit amel,consectetur adipsicing elit sed do<br>
                 ciusmod tempor incididunt.</p>
             </header>
             <div class="producto-latest">
                 <div class="container-pages-image-1">
-                    <a class="porce" href="#"><img src="./img/product-1.jpg" alt="">
+                    <a class="porce" href="#"><img src="./img/product-1.jpg" sizes="100%">
                         <p>-60%</p>
                         </a>
                         <br>
