--- a/pages.html
+++ b/pages.html
@@ -48,7 +48,7 @@
     </header>
     <main class="top-page-imagen item2">
             <div class="imagenbackground2">
-                <a href="#" id="imgtop"><img src="./img/slider-1.jpg"></a>
+                <a href="#" id="imgtop">Single Product</a>
             </div>
     </main>
     <section class="intermedium-page">
