entrega final responsive

--- a/Index.html
+++ b/Index.html
@@ -194,17 +194,17 @@
             </div>
         </div>
         <div class="newletter">
-            <h1> Join to our Newsletter</h1>
+            <h1 class="titulo"> Join to our Newsletter</h1>
             <div class="email-subscribe">
-                <input type="email" placeholder="Your Email Address*">
-                <button>SUBSCRIBE</button>
+                <input class="email-input" type="email" placeholder="Your Email Address*">
+                <button class="button-subscribe">SUBSCRIBE</button>
             </div>
         </div>
         <div class="Blog-New">
             <h1>Latest News</h1>
             <div class="product-Blog">
                 <div class="container-blog-image">
-                    <img src="./img/blog-single-1.jpg" alt=""><br>
+                    <img src="./img/blog-single-1.jpg" alt="" width="100%"><br>
                     <a class="fecha" href="#">14 Sep</a>
                     <br>
                     <h2>Lorem ipsum sit ame co.</h2>
@@ -215,7 +215,7 @@
                     <button class="button-blog">READ MORE</button>
                 </div>
                 <div class="container-blog-image2">
-                    <img src="./img/blog-single-2.jpg" alt=""><br>
+                    <img src="./img/blog-single-2.jpg" alt="" width="100%"><br>
                     <a class="fecha" href="#">20 Dec</a>
                     <br>
                     <h2>Lorem ipsum sit ame co.</h2>
@@ -226,7 +226,7 @@
                     <button class="button-blog">READ MORE</button>
                 </div>
                 <div class="container-blog-image3">
-                    <img src="./img/blog-single-3.jpg" alt=""><br>
+                    <img src="./img/blog-single-3.jpg" alt="" width="100%"><br>
                     <a class="fecha" href="#">18 Aug</a>
                     <br>
                     <h2>Lorem ipsum sit ame co.</h2>
@@ -363,7 +363,7 @@
         </div>
         <div id="footer-legal-down">
             <div class="Legal-left">
-                <small>© 2021 <b>SabujCha</b> Made With  By <i class="fa fa-heart" style="font-size:1.1vw;color:red"> </i> <b>HasThemes</b> </small>
+                <small>© 2021 <b>SabujCha</b> Made With  By <i class="fa fa-heart" style="font-size:2vh;color:red"> </i> <b>HasThemes</b> </small>
             </div>
             <div>
             <img src="./img/payment.png">
