--- a/Index.html
+++ b/Index.html
@@ -201,7 +201,7 @@
             </div>
         </div>
         <div class="Blog-New">
-            <h1>Latest News</h1>
+            <h1 class="titulo-blog">Latest News</h1>
             <div class="product-Blog">
                 <div class="container-blog-image">
                     <img src="./img/blog-single-1.jpg" alt="" width="100%"><br>
