--- a/pages.html
+++ b/pages.html
@@ -6,8 +6,8 @@
     <!--Dimensiones de la pagina mobil y en escritorio.-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/Pages.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/Pages.css">
 
     <!--Titulo de la pagina-->
     <title>SabujCha</title>
