--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!--Dimensiones de la pagina mobil y en escritorio.-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://github.com/CarlosEmartinezC/sabujchacarlos.git/CSS/stile.css">
+    <link rel="stylesheet" href="https://github.com/CarlosEmartinezC/sabujchacarlos.git/CSS/style.css">
     <!--Titulo de la pagina-->
     <title>SabujCha</title>
     <link rel="icon" href="./img/logo-pestaña.ico">
