--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </nav>
                 <!-- Logo-en-el-header-->
         <div class="logo-header">
-            <a href="Index.html"><img src="../img/logo.png" alt="Logo SabujCha"></a>
+            <a href="Index.html"><img src="./img/logo.png" alt="Logo SabujCha"></a>
         </div>
         <!-- imagen-de-carrito-y-opciones-de-moneda-->
         <div class="carrito">
