--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <!--Dimensiones de la pagina mobil y en escritorio.-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
-    <link rel="stylesheet" href="./css/Style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <!--Titulo de la pagina-->
     <title>SabujCha</title>
     <link rel="icon" href="./img/logo-pestaña.ico">
@@ -37,7 +37,7 @@
         </nav>
                 <!-- Logo-en-el-header-->
         <div class="logo-header">
-            <a href="Index.html"><img src="../img/logo.png" alt="Logo SabujCha"></a>
+            <a href="Index.html"><img src="./img/logo.png" alt="Logo SabujCha"></a>
         </div>
         <!-- imagen-de-carrito-y-opciones-de-moneda-->
         <div class="carrito">
